# QBC

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.idx/: dev.nix
docs/: setup.md
instance/: qbc.db
qb/: package-lock.json  package.json
qb/public/: index.html
qb/src/: App.js  index.js
qb/src/components/: Footer.js  Navbar.js
qb/src/layouts/: AdminLayout.js
qb/src/pages/: AddChapter.js  AddQuiz.js  AddSubject.js  AdminAbout.js  AdminAnalytics.js  AdminDashboard.js  EditQuestion.js  QuizPerformance.js  TakeQuiz.js
website/: __init__.py  auth.py  decorators.py  models.py  views.py
website/templates/: about.html  add_chapter.html  add_quiz.html  add_subject.html  admin_about.html  admin_analytics.html  admin_base.html  admin_change_password.html  admin_dashboard.html  admin_profile.html  analytics.html  change_password.html  edit_admin_profile.html  edit_profile.html  edit_question.html  home.html  landing_page.html  login.html  performance.html  profile.html  quiz_page.html  sign-up.html  user_about.html  user_analytics.html  user_base.html  user_dashboard.html  view_chapters.html  view_quiz.html  view_quizzes.html
website/templates/admin/: about.html  analytics.html  change_password.html  dashboard.html  edit_admin_profile.html  profile.html
website/templates/auth/: sign-up.html  verify_email.html
website/templates/base/: admin_base.html  user_base.html
website/templates/quizzes/: add_quiz.html  edit_question.html  quiz_page.html  view_quiz.html  view_quizzes.html
website/templates/user/: about.html  (+6 more)
(+3 files in other folders)
