[project]
name = "qbc"
version = "0.1.0"
description = ""
authors = [
    {name = "m"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-mailman (>=1.1.1,<2.0.0)",
    "greenlet (==3.2.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
